--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
           <li><a href="about.html">About Us</a></li>
           <li><a href="services.html">Services</a></li>
           <li><a href="media.html">Media</a></li>
-          <li><a href="contact.html">Contact Us</a></li>
+          <li><a href="#">Contact Us</a></li>
+<!--          <li><a href="contact.html">Contact Us</a></li> -->
         </ul>
       </div>
 
@@ -37,7 +38,8 @@
               <li><a href="about.html">About Us</a></li>
               <li><a href="services.html">Services</a></li>
               <li><a href="media.html">Media</a></li>
-              <li><a href="contact.html">Contact Us</a></li>
+              <li><a href="#">Contact Us</a></li>
+<!--          <li><a href="contact.html">Contact Us</a></li> -->
             </ul>
             </div>
         </nav>
@@ -67,7 +69,8 @@
                   <li><a href="about.html">About Us</a></li>
                   <li><a href="services.html">Services</a></li>
                   <li><a href="media.html">Media</a></li>
-                  <li><a href="contact.html">Contact Us</a></li>
+                  <li><a href="#">Contact Us</a></li>
+<!--          <li><a href="contact.html">Contact Us</a></li> -->
                 </ul>
               </div>
             </div>
