UPDATE WITH main-color CLASS

--- a/index.html
+++ b/index.html
@@ -114,25 +114,25 @@
             <div class="col-lg-10 col-lg-offset-1">
               <div class="ui-decor-1"><img src="assets/media/general/ui-decor-1.png" alt="decor" class="center-block"></div>
               <div class="text-center">
-                <h2 class="ui-title-block ui-title-block_lg">Welcome to<span class="text-primary"> Posh Royal Events &amp; Style</span></h2>
+                <h2 class="ui-title-block ui-title-block_lg main-color">Welcome to<span class="text-primary"> Posh Royal Events &amp; Style</span></h2>
                 <div class="ui-subtitle-block">From Wedding Functions to Birthday Parties or Corporate Events to Musical Functions,<br>We offer full range of Events Management Services that scale to your needs & budget.</div>
               </div>
             </div>
           </div>
           <div class="row">
             <div class="col-sm-4">
-              <section class="b-advantages b-advantages-1"><i class="b-advantages__icon text-primary icon-puzzle"></i>
+              <section class="b-advantages b-advantages-1"><i class="b-advantages__icon text-primary icon-puzzle main-color"></i>
                 <div class="b-advantages__inner">
-                  <h3 class="b-advantages__title ui-title-inner">Great People</h3>
+                  <h3 class="b-advantages__title ui-title-inner main-color">Great People</h3>
                   <div class="b-advantages__info">Posh Royal Events & Style is the new face of elegant and posh events. We focus on providing bespoke events, leaving nothing to chance from start to finish. </div><a href="about.html" class="btn btn-default btn-xs"><i class="icon"></i>Read More</a>
                 </div>
               </section>
               
             </div>
             <div class="col-sm-4">
-              <section class="b-advantages b-advantages-1"><i class="b-advantages__icon text-primary icon-magic-wand"></i>
+              <section class="b-advantages b-advantages-1"><i class="b-advantages__icon text-primary icon-magic-wand main-color"></i>
                 <div class="b-advantages__inner">
-                  <h3 class="b-advantages__title ui-title-inner">Great Services</h3>
+                  <h3 class="b-advantages__title ui-title-inner main-color">Great Services</h3>
                   <div class="b-advantages__info">At Posh Royal Events & Style, we leave no stone unturned and with our plethora of services we are fully set to match your needs as demanded.</div><a href="#" class="btn btn-default btn-xs"><i class="icon"></i>Read More</a>
                 </div>
               </section>
@@ -141,9 +141,9 @@
 
 
             <div class="col-sm-4">
-              <section class="b-advantages b-advantages-1"><i class="b-advantages__icon text-primary icon-pie-chart"></i>
+              <section class="b-advantages b-advantages-1"><i class="b-advantages__icon text-primary icon-pie-chart main-color"></i>
                 <div class="b-advantages__inner">
-                  <h3 class="b-advantages__title ui-title-inner">Great Ideas</h3>
+                  <h3 class="b-advantages__title ui-title-inner main-color">Great Ideas</h3>
                   <div class="b-advantages__info">At Posh Royal Events & Style, our mission is to create luxury and high quality service through innovation and creativity to deliver value to our customers..</div><a href="#" class="btn btn-default btn-xs"><i class="icon"></i>Read More</a>
                 </div>
               </section>
@@ -175,8 +175,8 @@
         <div class="container">
           <div class="row">
             <div class="col-xs-12">
-              <h2 class="ui-title-block"><span class="text-primary">Our</span> Clients</h2>
-              <div class="ui-subtitle-block">We make your events smart & impactful by personalised event management services.</div>
+              <h2 class="ui-title-block main-color"><span class="text-primary">Our</span> Clients</h2>
+              <div class="ui-subtitle-block main-color">We make your events smart & impactful by personalised event management services.</div>
 
             </div>
           </div>
