--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <li><a href="services.html">Services</a></li>
           <li><a href="media.html">Media</a></li>
           <li><a href="#">Contact Us</a></li>
-<!--          <li><a href="contact.html">Contact Us</a></li> -->
+          <li><a href="contact.html">Contact Us</a></li>
         </ul>
       </div>
 
