--- a/index.html
+++ b/index.html
@@ -38,8 +38,7 @@
               <li><a href="about.html">About Us</a></li>
               <li><a href="services.html">Services</a></li>
               <li><a href="media.html">Media</a></li>
-              <li><a href="#">Contact Us</a></li>
-<!--          <li><a href="contact.html">Contact Us</a></li> -->
+              <li><a href="contact.html">Contact Us</a></li>
             </ul>
             </div>
         </nav>
@@ -54,7 +53,7 @@
               <div class="header-navibox-1">
                 <!-- Mobile Trigger Start-->
                 <button class="menu-mobile-button visible-xs-block js-toggle-mobile-slidebar toggle-menu-button"><i class="toggle-menu-button-icon"><span></span><span></span><span></span><span></span><span></span><span></span></i></button>
-                <!-- Mobile Trigger End--><a href="home.html" class="navbar-brand scroll"><img style="max-height: 96px;" src="assets/images/logo.png" alt="logo" class="normal-logo"/> <img style="max-height: 96px;" src="assets/images/logo.png" alt="logo" class="scroll-logo hidden-xs"/> </a>
+                <!-- Mobile Trigger End--><a href="index.html" class="navbar-brand scroll"><img style="max-height: 96px;" src="assets/images/logo-black.png" alt="logo" class="normal-logo"/> <img style="max-height: 96px;" src="assets/images/logo-black.png" alt="logo" class="scroll-logo hidden-xs"/> </a>
               </div>
               <div class="header-navibox-3">
                 <ul class="nav navbar-nav hidden-xs clearfix vcenter">
@@ -69,8 +68,7 @@
                   <li><a href="about.html">About Us</a></li>
                   <li><a href="services.html">Services</a></li>
                   <li><a href="media.html">Media</a></li>
-                  <li><a href="#">Contact Us</a></li>
-<!--          <li><a href="contact.html">Contact Us</a></li> -->
+                  <li><a href="contact.html">Contact Us</a></li>
                 </ul>
               </div>
             </div>
@@ -80,7 +78,21 @@
 
       <div id="main-slider" data-slider-width="100%" data-slider-height="690px" data-slider-arrows="true" data-slider-buttons="false" class="main-slider slider-pro">
         <div class="sp-slides">
-          <div class="sp-slide"><img src="assets/images/wedding.png" alt="slider" class="sp-image"/>
+          <div class="sp-slide"><img src="assets/images/bg.png" alt="slider" class="sp-image"/>
+            <div class="container">
+              <div class="row">
+               <div class="col-sm-10 col-sm-offset-1">
+                  <div data-width="100%" data-show-transition="left" data-hide-transition="left" data-show-duration="2000" data-show-delay="1200" data-hide-delay="400" class="main-slider__info sp-layer">We are the Event Management Specialists</div>
+                  <h2 data-width="100%" data-show-transition="left" data-hide-transition="left" data-show-duration="800" data-show-delay="400" data-hide-delay="400" class="main-slider__title sp-layer">we personalize your wedding events</h2>
+                  <div data-width="100%" data-show-transition="left" data-hide-transition="left" data-show-duration="1200" data-show-delay="2000" data-hide-delay="400" class="sp-layer"><a href="services.html" class="main-slider__btn btn btn-default">our features</a></div>
+                </div>
+              </div>
+            </div>
+          </div>
+        
+        <div class="sp-slides">
+          <!-- <div class="sp-slide"><img src="assets/images/wedding.png" alt="slider" class="sp-image"/> -->
+          <div class="sp-slide"><img src="assets/images/party.jpg" alt="slider" class="sp-image"/>
             <div class="container">
               <div class="row">
                <div class="col-sm-10 col-sm-offset-1">
@@ -103,10 +115,8 @@
               </div>
             </div>
           </div>
-
         </div>
       </div>
-
 
       <section class="section-default">
         <div class="container">
