--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
           <li><a href="about.html">About Us</a></li>
           <li><a href="services.html">Services</a></li>
           <li><a href="media.html">Media</a></li>
-          <li><a href="#">Contact Us</a></li>
           <li><a href="contact.html">Contact Us</a></li>
         </ul>
       </div>
@@ -44,7 +43,6 @@
         </nav>
         <button type="button" class="fullmenu-close"><i class="fa fa-times"></i></button>
       </div>
-
 
       <header class="header header-boxed-width header-background-trans header-logo-black header-topbarbox-1-left header-topbarbox-2-right header-navibox-1-left header-navibox-2-right header-navibox-3-right header-navibox-4-right">
         <div class="container container-boxed-width">
@@ -90,9 +88,8 @@
             </div>
           </div>
         
-        <div class="sp-slides">
           <!-- <div class="sp-slide"><img src="assets/images/wedding.png" alt="slider" class="sp-image"/> -->
-          <div class="sp-slide"><img src="assets/images/party.jpg" alt="slider" class="sp-image"/>
+          <div class="sp-slide"><img src="assets/images/party.JPG" alt="slider" class="sp-image"/>
             <div class="container">
               <div class="row">
                <div class="col-sm-10 col-sm-offset-1">
