--- a/index.html
+++ b/index.html
@@ -79,11 +79,7 @@
           <div class="sp-slide"><img src="assets/images/bg.png" alt="slider" class="sp-image"/>
             <div class="container">
               <div class="row">
-               <div class="col-sm-10 col-sm-offset-1">
-                  <div data-width="100%" data-show-transition="left" data-hide-transition="left" data-show-duration="2000" data-show-delay="1200" data-hide-delay="400" class="main-slider__info sp-layer">We are the Event Management Specialists</div>
-                  <h2 data-width="100%" data-show-transition="left" data-hide-transition="left" data-show-duration="800" data-show-delay="400" data-hide-delay="400" class="main-slider__title sp-layer">we personalize your wedding events</h2>
-                  <div data-width="100%" data-show-transition="left" data-hide-transition="left" data-show-duration="1200" data-show-delay="2000" data-hide-delay="400" class="sp-layer"><a href="services.html" class="main-slider__btn btn btn-default">our features</a></div>
-                </div>
+               <div class="col-sm-10 col-sm-offset-1"></div>
               </div>
             </div>
           </div>
