--- a/contact.html
+++ b/contact.html
@@ -52,7 +52,7 @@
               <div class="header-navibox-1">
                 <!-- Mobile Trigger Start-->
                 <button class="menu-mobile-button visible-xs-block js-toggle-mobile-slidebar toggle-menu-button"><i class="toggle-menu-button-icon"><span></span><span></span><span></span><span></span><span></span><span></span></i></button>
-                <!-- Mobile Trigger End--><a href="home.html" class="navbar-brand scroll"><img style="max-height: 96px;" src="assets/images/logo.png" alt="logo" class="normal-logo"/> <img style="max-height: 96px;" src="assets/images/logo.png" alt="logo" class="scroll-logo hidden-xs"/> </a>
+                <!-- Mobile Trigger End--><a href="home.html" class="navbar-brand scroll"><img style="max-height: 96px;" src="assets/images/logo-black.png" alt="logo" class="normal-logo"/> <img style="max-height: 96px;" src="assets/images/logo-black.png" alt="logo" class="scroll-logo hidden-xs"/> </a>
               </div>
               <div class="header-navibox-3">
                 <ul class="nav navbar-nav hidden-xs clearfix vcenter">
