--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@
               <div class="header-navibox-1">
                 <!-- Mobile Trigger Start-->
                 <button class="menu-mobile-button visible-xs-block js-toggle-mobile-slidebar toggle-menu-button"><i class="toggle-menu-button-icon"><span></span><span></span><span></span><span></span><span></span><span></span></i></button>
-                <!-- Mobile Trigger End--><a href="home.html" class="navbar-brand scroll"><img style="max-height: 96px;" src="assets/images/logo-black.png" alt="logo" class="normal-logo"/> <img style="max-height: 96px;" src="assets/images/logo-black.png" alt="logo" class="scroll-logo hidden-xs"/> </a>
+                <!-- Mobile Trigger End--><a href="index.html" class="navbar-brand scroll"><img style="max-height: 96px;" src="assets/images/logo-black.png" alt="logo" class="normal-logo"/> <img style="max-height: 96px;" src="assets/images/logo-black.png" alt="logo" class="scroll-logo hidden-xs"/> </a>
               </div>
               <div class="header-navibox-3">
                 <ul class="nav navbar-nav hidden-xs clearfix vcenter">
@@ -232,7 +232,7 @@
           <div class="container">
             <div class="row">
               <div class="col-xs-12">
-                <div class="text-center"><a href="home.html" class="footer__logo"><img style="max-height: 112px;" src="assets/images/logo-transparent.png" alt="Logo" class="img-responsive"/></a></div>
+                <div class="text-center"><a href="index.html" class="footer__logo"><img style="max-height: 112px;" src="assets/images/logo-transparent.png" alt="Logo" class="img-responsive"/></a></div>
               </div>
             </div>
             <div class="row">
