--- a/contact.html
+++ b/contact.html
@@ -16,13 +16,6 @@
     <script src="/assets/js/separate-js/html5shiv-3.7.2.min.js" type="text/javascript"></script><meta content="no" http-equiv="imagetoolbar">
     <![endif]-->
     <style type="text/css">
-      
-.b-title-page {
-    position: relative;
-    padding: 70px 0 60px;
-    background-image: url(assets/images/bg.png);
-    text-align: center;
-}
     </style>
   </head>
   <body>
@@ -61,7 +54,7 @@
               <div class="header-navibox-1">
                 <!-- Mobile Trigger Start-->
                 <button class="menu-mobile-button visible-xs-block js-toggle-mobile-slidebar toggle-menu-button"><i class="toggle-menu-button-icon"><span></span><span></span><span></span><span></span><span></span><span></span></i></button>
-                <!-- Mobile Trigger End--><a href="home.html" class="navbar-brand scroll"><img style="max-height: 96px;" src="assets/images/logo-black.png" alt="logo" class="normal-logo"/> <img style="max-height: 96px;" src="assets/images/logo-black.png" alt="logo" class="scroll-logo hidden-xs"/> </a>
+                <!-- Mobile Trigger End--><a href="index.html" class="navbar-brand scroll"><img style="max-height: 96px;" src="assets/images/logo-black.png" alt="logo" class="normal-logo"/> <img style="max-height: 96px;" src="assets/images/logo-black.png" alt="logo" class="scroll-logo hidden-xs"/> </a>
               </div>
               <div class="header-navibox-3">
                 <ul class="nav navbar-nav hidden-xs clearfix vcenter">
@@ -113,7 +106,7 @@
           </div>
           <div class="row">
             <div class="col-lg-4 col-lg-offset-0 col-md-6 col-md-offset-3">
-              <div data-stellar-background-ratio="0.4" class="b-contact stellar section-texture section-texture_green section-radius">
+              <div style="background-color: #000;" data-stellar-background-ratio="0.4" class="b-contact stellar section-texture section-texture_green section-radius">
                 <div class="b-contact__name">Address</div>
                 <div class="b-contact__info"> 5th Avenue, Q Close, House 8, Festac </div>
                 <!-- <div class="b-contact__info"> 5th Avenue, Q Close, House 8, Festac Town, Lagos </div> -->
@@ -121,7 +114,7 @@
               </div>
             </div>
             <div class="col-lg-4 col-lg-offset-0 col-md-6 col-md-offset-3">
-              <div data-stellar-background-ratio="0.4" class="b-contact stellar section-texture section-texture_blue section-radius">
+              <div style="background-color: #bb8632;" data-stellar-background-ratio="0.4" class="b-contact stellar section-texture section-texture_blue section-radius">
                 <div class="b-contact__name">Phone</div>
                 <div class="b-contact__info">(+234) 802 363 0583</div>
                 <div class="b-contact__info">(+234) 808 139 9834</div>
@@ -129,7 +122,7 @@
               </div>
             </div>
             <div class="col-lg-4 col-lg-offset-0 col-md-6 col-md-offset-3">
-              <div data-stellar-background-ratio="0.4" class="b-contact stellar section-texture section-texture_grey section-radius">
+              <div style="background-color: #000;" data-stellar-background-ratio="0.4" class="b-contact stellar section-texture section-texture_grey section-radius">
                 <div class="b-contact__name">Email</div>
                 <div class="b-contact__info">contact@poshroyaleventsstyle.com</div>
                 <div class="b-contact__icon icon-envelope-open"></div>
@@ -176,7 +169,7 @@
           <div class="container">
             <div class="row">
               <div class="col-xs-12">
-                <div class="text-center"><a href="home.html" class="footer__logo"><img style="max-height: 112px;" src="assets/images/logo-transparent.png" alt="Logo" class="img-responsive"/></a></div>
+                <div class="text-center"><a href="index.html" class="footer__logo"><img style="max-height: 112px;" src="assets/images/logo-transparent.png" alt="Logo" class="img-responsive"/></a></div>
               </div>
             </div>
             <div class="row">
