--- a/about.html
+++ b/about.html
@@ -107,16 +107,18 @@
             <section class="b-advantages-2 b-advantages-2_mod-a"><i class="b-advantages-2__icon flaticon-people"></i>
               <div class="b-advantages-2__inner">
                 <h3 class="b-advantages-2__title ui-title-inner bg-primary_b">The Events Specialists</h3>
-                <div class="b-advantages-2__info">We need content here.</div>
+                <div class="b-advantages-2__info">Nigerians are known for their love for beauty and grandeur and as such we’ve developed expertise in crafting luxury and grand occasions that is time efficient in a stress-free manner.</div>
               </div>
             </section>
 
+<!--
             <section class="b-advantages-2 b-advantages-2_mod-a"><i class="b-advantages-2__icon flaticon-firework"></i>
               <div class="b-advantages-2__inner">
                 <h3 class="b-advantages-2__title ui-title-inner bg-primary_b">Dedicated Venues &amp; Arrangements</h3>
                 <div class="b-advantages-2__info">We need content here.</div>
               </div>
             </section>
+-->
 
             <section class="b-advantages-2 b-advantages-2_mod-a"><i class="b-advantages-2__icon flaticon-technology"></i>
               <div class="b-advantages-2__inner">
@@ -148,9 +150,9 @@
                 <div class="b-team__media"><img src="assets/images/rosemary-ceo.jpeg" alt="rosemary-ceo" class="img-responsive"/></div>
                 <div class="b-team__inner">
                   <div class="ui-decor-2 bg-primary"></div>
-                  <h3 class="b-team__name ui-title-inner">Rosemary Udu</h3>
-                  <div class="b-team__category">CEO &amp; MD</div>
-                  <div class="b-team__description">Need Short description about you</div>
+                  <h3 class="b-team__name ui-title-inner" style="">Rosemary Udu</h3>
+                  <div class="b-team__category">MD / CEO</div>
+                  <div class="b-team__description" style="padding-bottom: 12px;margin-bottom: 0;">Rosemary Udu is the Managing Director / CEO of Posh Royal Events & Style where she leads a team of champions who have an in-depth understanding of the Event Industry. Rosemary is passionate about people development, coaching and mentoring. She also particularly enjoys working with and supporting women.</div>
                   <ul class="social-net list-inline">
                     <li class="social-net__item"><a href="twitter.com" class="social-net__link text-primary_h"><i class="icon fa fa-twitter"></i></a></li>
                     <li class="social-net__item"><a href="facebook.com" class="social-net__link text-primary_h"><i class="icon fa fa-facebook"></i></a></li>
@@ -165,8 +167,8 @@
                 <div class="b-team__inner">
                   <div class="ui-decor-2 bg-primary"></div>
                   <h3 class="b-team__name ui-title-inner">Maria Apkoduado</h3>
-                  <div class="b-team__category">Events Manager</div>
-                  <div class="b-team__description">Need Short description here</div>
+                  <div class="b-team__category"> Head of Operations </div>
+                  <div class="b-team__description" style="padding-bottom: 12px;margin-bottom: 0;">A graduate of Computer Science from the prestigious Covenant University. An ex-banker with a sound background in Strategic Business Development, Marketing & Sales, Relationship Management and Operations Management spanning over a 10-year period. She is very passionate about delivering excellence and creating value. </div>
                   <ul class="social-net list-inline">
                     <li class="social-net__item"><a href="twitter.com" class="social-net__link text-primary_h"><i class="icon fa fa-twitter"></i></a></li>
                     <li class="social-net__item"><a href="facebook.com" class="social-net__link text-primary_h"><i class="icon fa fa-facebook"></i></a></li>
