--- a/about.html
+++ b/about.html
@@ -152,7 +152,7 @@
                   <div class="ui-decor-2 bg-primary"></div>
                   <h3 class="b-team__name ui-title-inner" style="">Rosemary Udu</h3>
                   <div class="b-team__category">MD / CEO</div>
-                  <div class="b-team__description" style="padding-bottom: 12px;margin-bottom: 0;">Rosemary Udu is the Managing Director / CEO of Posh Royal Events & Style where she leads a team of champions who have an in-depth understanding of the Event Industry. Rosemary is passionate about people development, coaching and mentoring. She also particularly enjoys working with and supporting women.</div>
+                  <div class="b-team__description" style=" text-align: justify; padding-bottom: 12px;margin-bottom: 0;">Rosemary Udu is the Managing Director / CEO of Posh Royal Events & Style where she leads a team of champions who have an in-depth understanding of the Event Industry. Rosemary is passionate about people development, coaching and mentoring. She also particularly enjoys working with and supporting women.</div>
                   <ul class="social-net list-inline">
                     <li class="social-net__item"><a href="twitter.com" class="social-net__link text-primary_h"><i class="icon fa fa-twitter"></i></a></li>
                     <li class="social-net__item"><a href="facebook.com" class="social-net__link text-primary_h"><i class="icon fa fa-facebook"></i></a></li>
@@ -168,7 +168,7 @@
                   <div class="ui-decor-2 bg-primary"></div>
                   <h3 class="b-team__name ui-title-inner">Maria Apkoduado</h3>
                   <div class="b-team__category"> Head of Operations </div>
-                  <div class="b-team__description" style="padding-bottom: 12px;margin-bottom: 0;">A graduate of Computer Science from the prestigious Covenant University. An ex-banker with a sound background in Strategic Business Development, Marketing & Sales, Relationship Management and Operations Management spanning over a 10-year period. She is very passionate about delivering excellence and creating value. </div>
+                  <div class="b-team__description" style=" text-align: justify; padding-bottom: 12px;margin-bottom: 0;">A graduate of Computer Science from the prestigious Covenant University. An ex-banker with a sound background in Strategic Business Development, Marketing & Sales, Relationship Management and Operations Management spanning over a 10-year period. She is very passionate about delivering excellence and creating value. </div>
                   <ul class="social-net list-inline">
                     <li class="social-net__item"><a href="twitter.com" class="social-net__link text-primary_h"><i class="icon fa fa-twitter"></i></a></li>
                     <li class="social-net__item"><a href="facebook.com" class="social-net__link text-primary_h"><i class="icon fa fa-facebook"></i></a></li>
@@ -184,7 +184,7 @@
                   <div class="ui-decor-2 bg-primary"></div>
                   <h3 class="b-team__name ui-title-inner">Emmanuel Okoro</h3>
                   <div class="b-team__category">Head, Coordination</div>
-                  <div class="b-team__description" style="padding-bottom: 12px;margin-bottom: 0;">Emmanuel Okoro is a highly confident and organized administrative professional with diverse range of administrative experiences in various industries. He is an invaluable member of our team and possesses the requisite knowledge and is fully aligned with the fact that the most successful event is the one that meets your goals and exceeds your expectations.</div>
+                  <div class="b-team__description" style=" text-align: justify; padding-bottom: 12px;margin-bottom: 0;">Emmanuel Okoro is a highly confident and organized administrative professional with diverse range of administrative experiences in various industries. He is an invaluable member of our team and possesses the requisite knowledge and is fully aligned with the fact that the most successful event is the one that meets your goals and exceeds your expectations.</div>
                   <ul class="social-net list-inline">
                     <li class="social-net__item"><a href="twitter.com" class="social-net__link text-primary_h"><i class="icon fa fa-twitter"></i></a></li>
                     <li class="social-net__item"><a href="facebook.com" class="social-net__link text-primary_h"><i class="icon fa fa-facebook"></i></a></li>
