--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico"/><!--[if lt IE 9 ]>
     <script src="/assets/js/separate-js/html5shiv-3.7.2.min.js" type="text/javascript"></script><meta content="no" http-equiv="imagetoolbar">
     <![endif]-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
   </head>
   <body>
 
@@ -74,41 +75,61 @@
         </div>
       </header>
 
-      <div id="main-slider" data-slider-width="100%" data-slider-height="690px" data-slider-arrows="true" data-slider-buttons="false" class="main-slider slider-pro">
-        <div class="sp-slides">
-          <div class="sp-slide"><img src="assets/images/bg.png" alt="slider" class="sp-image"/>
-            <div class="container">
-              <div class="row">
-               <div class="col-sm-10 col-sm-offset-1"></div>
-              </div>
+      <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+      <!--
+        <ol class="carousel-indicators">
+          <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+          <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+          <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+        </ol>
+      -->
+
+        <div class="carousel-inner" role="listbox">
+          <div class="item active">
+            <img src="assets/images/bg.png" alt="slider" class="image"/>
+            <div class="carousel-caption">
             </div>
           </div>
-        
-          <!-- <div class="sp-slide"><img src="assets/images/wedding.png" alt="slider" class="sp-image"/> -->
-          <div class="sp-slide"><img src="assets/images/party.JPG" alt="slider" class="sp-image"/>
-            <div class="container">
-              <div class="row">
-               <div class="col-sm-10 col-sm-offset-1">
-                  <div data-width="100%" data-show-transition="left" data-hide-transition="left" data-show-duration="2000" data-show-delay="1200" data-hide-delay="400" class="main-slider__info sp-layer">We are the Event Management Specialists</div>
-                  <h2 data-width="100%" data-show-transition="left" data-hide-transition="left" data-show-duration="800" data-show-delay="400" data-hide-delay="400" class="main-slider__title sp-layer">we personalize your wedding events</h2>
-                  <div data-width="100%" data-show-transition="left" data-hide-transition="left" data-show-duration="1200" data-show-delay="2000" data-hide-delay="400" class="sp-layer"><a href="services.html" class="main-slider__btn btn btn-default">our features</a></div>
+
+          <div class="item">
+            <img src="assets/images/party.JPG" alt="slider" class="image"/>
+            <div class="carousel-caption" style="bottom: 226px;">
+              <div class="container">
+                <div class="row">
+                 <div class="col-sm-10 ">
+                    <div class="slider_title animated fadeInLeft delay-1s" style="font-size: 20px; font-style: italic;letter-spacing: 4px;font-weight: 'PT Serif'">We are the Event Management Specialists</div>
+                    <h2 class="slider_content animated fadeIn delay-1s" style="transform-origin: left top; transform: scale(1) translate3d(-50px, 0px, 0px); transition: opacity 0.4s ease 0s, transform 0.4s ease 0s; margin-top: 14px; font-size: 58px; font-weight: 600; line-height: 1.1; color: #fff; letter-spacing: 0.02em; text-transform: uppercase; ">we personalize your wedding events</h2>
+                    <div class="slider_link animated lightSpeedIn delay-1s"><a href="services.html" class="main-slider__btn btn btn-default">our features</a></div>
+                  </div>
                 </div>
               </div>
             </div>
           </div>
 
-          <div class="sp-slide"><img src="assets/images/party.png" alt="slider" class="sp-image"/>
-            <div class="container">
-              <div class="row">
-                <div class="col-sm-10 col-sm-offset-1">
-                  <div data-width="100%" data-show-transition="left" data-hide-transition="left" data-show-duration="2000" data-show-delay="1200" data-hide-delay="400" class="main-slider__info sp-layer">Birthday Event Management Specialists</div>
-                  <h2 data-width="100%" data-show-transition="left" data-hide-transition="left" data-show-duration="800" data-show-delay="400" data-hide-delay="400" class="main-slider__title sp-layer">celebrate your events<br>that lasts longer</h2>
-                  <div data-width="100%" data-show-transition="left" data-hide-transition="left" data-show-duration="1200" data-show-delay="2000" data-hide-delay="400" class="sp-layer"><a href="about.html" class="main-slider__btn btn btn-default">read more</a></div>
+          <div class="item">
+            <img src="assets/images/party.png" alt="slider" class="image"/>
+            <div class="carousel-caption" style="bottom: 84px;">
+              <div class="container">
+                <div class="row">
+                  <div class="col-sm-10 ">
+                    <div class="slider_title animated fadeInLeft delay-1s" style="font-size: 20px; font-style: italic;letter-spacing: 4px;font-weight: 'PT Serif'">Birthday Event Management Specialists</div>
+                    <h2 class="slider_content animated fadeIn delay-1s" style="transform-origin: left top; transform: scale(1) translate3d(-50px, 0px, 0px); transition: opacity 0.4s ease 0s, transform 0.4s ease 0s; margin-top: 14px; font-size: 58px; font-weight: 600; line-height: 1.1; color: #fff; letter-spacing: 0.02em; text-transform: uppercase; ">celebrate your events<br>that lasts longer</h2>
+                    <div class="slider_link animated lightSpeedIn delay-1s"><a href="about.html" class="main-slider__btn btn btn-default">read more</a></div>
+                  </div>
                 </div>
               </div>
             </div>
           </div>
         </div>
+
+        <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+          <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+          <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
       </div>
 
       <section class="section-default">
@@ -323,5 +344,14 @@
     <script src="assets/plugins/scrollreveal/scrollreveal.min.js"></script>
     <!-- Main slider-->
     <script src="assets/plugins/slider-pro/jquery.sliderPro.min.js"></script>
+
+
+<script type="text/javascript">
+
+$('.carousel').carousel({
+  interval: 100000
+}
+
+</script>
   </body>
 </html>
