--- a/index.html
+++ b/index.html
@@ -75,12 +75,12 @@
         </div>
       </header>
 
-      <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+      <div id="sliders" class="carousel slide" data-ride="carousel">
       <!--
         <ol class="carousel-indicators">
-          <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-          <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-          <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+          <li data-target="#sliders" data-slide-to="0" class="active"></li>
+          <li data-target="#sliders" data-slide-to="1"></li>
+          <li data-target="#sliders" data-slide-to="2"></li>
         </ol>
       -->
 
