--- a/index.html
+++ b/index.html
@@ -16,6 +16,57 @@
     <script src="/assets/js/separate-js/html5shiv-3.7.2.min.js" type="text/javascript"></script><meta content="no" http-equiv="imagetoolbar">
     <![endif]-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
+    <style type="text/css">
+.slider_title {
+  font-style: italic;
+  letter-spacing: 4px;
+  font-weight: 400;
+  font-style: 'PT Serif';
+}
+
+.slider_content {
+  transform-origin: left top;
+  transform: scale(1) translate3d(-50px, 0px, 0px);
+  transition: opacity 0.4s ease 0s, transform 0.4s ease 0s;
+  margin-top: 14px;
+  font-weight: 600;
+  line-height: 1.1;
+  color: #fff;
+  letter-spacing: 0.02em;
+  text-transform: uppercase;
+}
+
+  .carousel-caption {
+    left: 0;
+    right: 0;
+    bottom: 0;
+  }
+
+@media (min-width: 992px) {
+  .carousel-caption {
+    left: 15%;
+    right: 15%;
+    bottom: 20px;
+  }
+
+.slider_content {
+  font-size: 58px;
+}
+
+.slider_title {
+  font-size: 20px;
+}
+
+.carousel-caption.party {
+bottom: 226px;
+}
+
+.carousel-caption .party-two {
+bottom: 84px;
+}
+
+}
+    </style>
   </head>
   <body>
 
@@ -93,12 +144,12 @@
 
           <div class="item">
             <img src="assets/images/party.JPG" alt="slider" class="image"/>
-            <div class="carousel-caption" style="bottom: 226px;">
+            <div class="carousel-caption party">
               <div class="container">
                 <div class="row">
-                 <div class="col-sm-10 ">
-                    <div class="slider_title animated fadeInLeft delay-1s" style="font-size: 20px; font-style: italic;letter-spacing: 4px;font-weight: 'PT Serif'">We are the Event Management Specialists</div>
-                    <h2 class="slider_content animated fadeIn delay-1s" style="transform-origin: left top; transform: scale(1) translate3d(-50px, 0px, 0px); transition: opacity 0.4s ease 0s, transform 0.4s ease 0s; margin-top: 14px; font-size: 58px; font-weight: 600; line-height: 1.1; color: #fff; letter-spacing: 0.02em; text-transform: uppercase; ">we personalize your wedding events</h2>
+                 <div class="col-xs-12 col-md-10 ">
+                    <div class="slider_title animated fadeInLeft delay-1s" style="">We are the Event Management Specialists</div>
+                    <h2 class="slider_content animated fadeIn delay-1s" style=" ">we personalize your wedding events</h2>
                     <div class="slider_link animated lightSpeedIn delay-1s"><a href="services.html" class="main-slider__btn btn btn-default">our features</a></div>
                   </div>
                 </div>
@@ -108,12 +159,12 @@
 
           <div class="item">
             <img src="assets/images/party.png" alt="slider" class="image"/>
-            <div class="carousel-caption" style="bottom: 84px;">
+            <div class="carousel-caption party-two" style="">
               <div class="container">
                 <div class="row">
-                  <div class="col-sm-10 ">
-                    <div class="slider_title animated fadeInLeft delay-1s" style="font-size: 20px; font-style: italic;letter-spacing: 4px;font-weight: 'PT Serif'">Birthday Event Management Specialists</div>
-                    <h2 class="slider_content animated fadeIn delay-1s" style="transform-origin: left top; transform: scale(1) translate3d(-50px, 0px, 0px); transition: opacity 0.4s ease 0s, transform 0.4s ease 0s; margin-top: 14px; font-size: 58px; font-weight: 600; line-height: 1.1; color: #fff; letter-spacing: 0.02em; text-transform: uppercase; ">celebrate your events<br>that lasts longer</h2>
+                  <div class="col-xs-12 col-md-10 ">
+                    <div class="slider_title animated fadeInLeft delay-1s" style="">Birthday Event Management Specialists</div>
+                    <h2 class="slider_content animated fadeIn delay-1s" style="">celebrate your events<br>that lasts longer</h2>
                     <div class="slider_link animated lightSpeedIn delay-1s"><a href="about.html" class="main-slider__btn btn btn-default">read more</a></div>
                   </div>
                 </div>
@@ -122,11 +173,11 @@
           </div>
         </div>
 
-        <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+        <a class="left carousel-control" href="#sliders" role="button" data-slide="prev">
           <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
           <span class="sr-only">Previous</span>
         </a>
-        <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+        <a class="right carousel-control" href="#sliders" role="button" data-slide="next">
           <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
           <span class="sr-only">Next</span>
         </a>
