--- a/about.html
+++ b/about.html
@@ -16,8 +16,30 @@
     <script src="/assets/js/separate-js/html5shiv-3.7.2.min.js" type="text/javascript"></script><meta content="no" http-equiv="imagetoolbar">
     <![endif]-->
     <style type="text/css">
-      
+      .section-type-2 {
+        padding: 12px;
+      }
+      .ui-title-block,
+      .ui-decor-1 {
+        text-align: center;
+      }
 
+      .b-advantages-2__title {
+        padding-top: 0;
+      }
+
+      @media (min-width: 992px) {
+        .b-advantages-2__title {
+          padding-top: 36px;
+        }
+        .ui-title-block,
+        .ui-decor-1 {
+          text-align: initial;
+        }
+        .section-type-2 {
+          padding: 92px 120px 56px;
+        }
+      }
     </style>
   </head>
   <body>
