--- a/index.html
+++ b/index.html
@@ -25,9 +25,12 @@
 }
 
 .slider_content {
+/*
   transform-origin: left top;
   transform: scale(1) translate3d(-50px, 0px, 0px);
   transition: opacity 0.4s ease 0s, transform 0.4s ease 0s;
+*/
+
   margin-top: 14px;
   font-weight: 600;
   line-height: 1.1;
@@ -49,23 +52,29 @@
     bottom: 20px;
   }
 
-.slider_content {
-  font-size: 58px;
+  .slider_content {
+    font-size: 58px;
+  }
+
+  .slider_title {
+    font-size: 20px;
+  }
+
+  .carousel-caption.party {
+  bottom: 226px;
+  }
+
+  .carousel-caption .party-two {
+  bottom: 84px;
+  }
 }
 
-.slider_title {
-  font-size: 20px;
+.parallax {
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
 }
 
-.carousel-caption.party {
-bottom: 226px;
-}
-
-.carousel-caption .party-two {
-bottom: 84px;
-}
-
-}
     </style>
   </head>
   <body>
