--- a/index.html
+++ b/index.html
@@ -45,29 +45,29 @@
     bottom: 0;
   }
 
-@media (min-width: 992px) {
-  .carousel-caption {
-    left: 15%;
-    right: 15%;
-    bottom: 20px;
-  }
+  @media (min-width: 992px) {
+    .carousel-caption {
+      left: 15%;
+      right: 15%;
+      bottom: 20px;
+    }
 
-  .slider_content {
-    font-size: 58px;
-  }
+    .slider_content {
+      font-size: 58px;
+    }
 
-  .slider_title {
-    font-size: 20px;
-  }
+    .slider_title {
+      font-size: 20px;
+    }
 
-  .carousel-caption.party {
-  bottom: 226px;
-  }
+    .carousel-caption.party {
+      bottom: 156px;
+    }
 
-  .carousel-caption .party-two {
-  bottom: 84px;
+    .carousel-caption.party-two {
+      bottom: 128px;
+    }
   }
-}
 
 .parallax {
   background-repeat: no-repeat;
@@ -152,7 +152,7 @@
           </div>
 
           <div class="item">
-            <img src="assets/images/party.JPG" alt="slider" class="image"/>
+            <img src="assets/images/slider1.png" alt="slider" class="image"/>
             <div class="carousel-caption party">
               <div class="container">
                 <div class="row">
@@ -167,7 +167,7 @@
           </div>
 
           <div class="item">
-            <img src="assets/images/party.png" alt="slider" class="image"/>
+            <img src="assets/images/slider2.png" alt="slider" class="image"/>
             <div class="carousel-caption party-two" style="">
               <div class="container">
                 <div class="row">
@@ -335,7 +335,7 @@
                   <h3 class="footer-section__title ui-title-inner"><i class="ui-decor-2 bg-primary"></i> Keep In Touch</h3>
                   <div class="footer__contact"><i class="icon icon-map"></i> 5th Avenue, Q Close, House 8, Festac Town, Lagos</div>
                   <div class="footer__contact"><i class="icon icon-call-in"></i> +2348023630583, +2348081399834</div>
-                  <div class="footer__contact"><i class="icon icon-envelope-open"></i> contact@poshroyaleventsstyle.com</div>
+                  <div class="footer__contact"><i class="icon icon-envelope-open"></i> info@poshroyaleventsstyle.com</div>
                   <div class="footer__contact"><i class="icon icon-clock"></i> Mon - Sat 8.00 am - 6.00 pm</div>
                 </section>
               </div>
