--- a/services.html
+++ b/services.html
@@ -325,7 +325,7 @@
                   <h3 class="footer-section__title ui-title-inner"><i class="ui-decor-2 bg-primary"></i> Keep In Touch</h3>
                   <div class="footer__contact"><i class="icon icon-map"></i> 5th Avenue, Q Close, House 8, Festac Town, Lagos</div>
                   <div class="footer__contact"><i class="icon icon-call-in"></i> +2348023630583, +2348081399834</div>
-                  <div class="footer__contact"><i class="icon icon-envelope-open"></i> contact@poshroyaleventsstyle.com</div>
+                  <div class="footer__contact"><i class="icon icon-envelope-open"></i> info@poshroyaleventsstyle.com</div>
                   <div class="footer__contact"><i class="icon icon-clock"></i> Mon - Sat 8.00 am - 6.00 pm</div>
                 </section>
               </div>
