--- a/contact.html
+++ b/contact.html
@@ -46,7 +46,6 @@
         <button type="button" class="fullmenu-close"><i class="fa fa-times"></i></button>
       </div>
 
-
       <header class="header header-boxed-width header-background-trans header-logo-black header-topbarbox-1-left header-topbarbox-2-right header-navibox-1-left header-navibox-2-right header-navibox-3-right header-navibox-4-right">
         <div class="container container-boxed-width">
           <nav id="nav" class="navbar">
@@ -76,7 +75,6 @@
           </nav>
         </div>
       </header>
-
 
       <div class="b-title-page area-bg area-bg_dark parallax">
         <div class="area-bg__inner">
@@ -124,7 +122,7 @@
             <div class="col-lg-4 col-lg-offset-0 col-md-6 col-md-offset-3">
               <div style="background-color: #000;" data-stellar-background-ratio="0.4" class="b-contact stellar section-texture section-texture_grey section-radius">
                 <div class="b-contact__name">Email</div>
-                <div class="b-contact__info">contact@poshroyaleventsstyle.com</div>
+                <div class="b-contact__info">info@poshroyaleventsstyle.com</div>
                 <div class="b-contact__icon icon-envelope-open"></div>
               </div>
             </div>
@@ -205,7 +203,7 @@
                   <h3 class="footer-section__title ui-title-inner"><i class="ui-decor-2 bg-primary"></i> Keep In Touch</h3>
                   <div class="footer__contact"><i class="icon icon-map"></i> 5th Avenue, Q Close, House 8, Festac Town, Lagos</div>
                   <div class="footer__contact"><i class="icon icon-call-in"></i> +2348023630583, +2348081399834</div>
-                  <div class="footer__contact"><i class="icon icon-envelope-open"></i> contact@poshroyaleventsstyle.com</div>
+                  <div class="footer__contact"><i class="icon icon-envelope-open"></i> info@poshroyaleventsstyle.com</div>
                   <div class="footer__contact"><i class="icon icon-clock"></i> Mon - Sat 8.00 am - 6.00 pm</div>
                 </section>
               </div>
