--- a/about.html
+++ b/about.html
@@ -52,6 +52,7 @@
           <li><a href="services.html">Services</a></li>
           <li><a href="media.html">Media</a></li>
           <li><a href="contact.html">Contact Us</a></li>
+          <li><a href="blog.html">Blog</a></li>
         </ul>
       </div>
 
@@ -64,6 +65,7 @@
               <li><a href="services.html">Services</a></li>
               <li><a href="media.html">Media</a></li>
               <li><a href="contact.html">Contact Us</a></li>
+              <li><a href="blog.html">Blog</a></li>
             </ul>
             </div>
         </nav>
@@ -94,6 +96,7 @@
                   <li><a href="services.html">Services</a></li>
                   <li><a href="media.html">Media</a></li>
                   <li><a href="contact.html">Contact Us</a></li>
+                  <li><a href="blog.html">Blog</a></li>
                 </ul>
               </div>
             </div>
