--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
           <li><a href="services.html">Services</a></li>
           <li><a href="media.html">Media</a></li>
           <li><a href="contact.html">Contact Us</a></li>
+          <li><a href="blog.html">Blog</a></li>
         </ul>
       </div>
 
@@ -99,6 +100,7 @@
               <li><a href="services.html">Services</a></li>
               <li><a href="media.html">Media</a></li>
               <li><a href="contact.html">Contact Us</a></li>
+              <li><a href="blog.html">Blog</a></li>
             </ul>
             </div>
         </nav>
@@ -128,6 +130,7 @@
                   <li><a href="services.html">Services</a></li>
                   <li><a href="media.html">Media</a></li>
                   <li><a href="contact.html">Contact Us</a></li>
+                  <li><a href="blog.html">Blog</a></li>
                 </ul>
               </div>
             </div>
