--- a/media.html
+++ b/media.html
@@ -31,6 +31,7 @@
           <li><a href="services.html">Services</a></li>
           <li><a href="media.html">Media</a></li>
           <li><a href="contact.html">Contact Us</a></li>
+          <li><a href="blog.html">Blog</a></li>
         </ul>
       </div>
 
@@ -43,6 +44,7 @@
               <li><a href="services.html">Services</a></li>
               <li><a href="media.html">Media</a></li>
               <li><a href="contact.html">Contact Us</a></li>
+              <li><a href="blog.html">Blog</a></li>
             </ul>
             </div>
         </nav>
@@ -73,6 +75,7 @@
                   <li><a href="services.html">Services</a></li>
                   <li><a href="media.html">Media</a></li>
                   <li><a href="contact.html">Contact Us</a></li>
+                  <li><a href="blog.html">Blog</a></li>
                 </ul>
               </div>
             </div>
