--- a/contact.html
+++ b/contact.html
@@ -28,6 +28,7 @@
           <li><a href="services.html">Services</a></li>
           <li><a href="media.html">Media</a></li>
           <li><a href="contact.html">Contact Us</a></li>
+          <li><a href="blog.html">Blog</a></li>
         </ul>
       </div>
 
@@ -40,6 +41,7 @@
               <li><a href="services.html">Services</a></li>
               <li><a href="media.html">Media</a></li>
               <li><a href="contact.html">Contact Us</a></li>
+              <li><a href="blog.html">Blog</a></li>
             </ul>
             </div>
         </nav>
@@ -69,6 +71,7 @@
                   <li><a href="services.html">Services</a></li>
                   <li><a href="media.html">Media</a></li>
                   <li><a href="contact.html">Contact Us</a></li>
+                  <li><a href="blog.html">Blog</a></li>
                 </ul>
               </div>
             </div>
