--- a/services.html
+++ b/services.html
@@ -56,6 +56,7 @@
           <li><a href="services.html">Services</a></li>
           <li><a href="media.html">Media</a></li>
           <li><a href="contact.html">Contact Us</a></li>
+          <li><a href="blog.html">Blog</a></li>
         </ul>
       </div>
 
@@ -67,7 +68,8 @@
               <li><a href="about.html">About Us</a></li>
               <li><a href="services.html">Services</a></li>
               <li><a href="media.html">Media</a></li>
-              <li><a href="contact.html">Contact Us</a></li>
+              <li><a href="contact.html">Contact Us</a></li>\
+              <li><a href="blog.html">Blog</a></li>
             </ul>
             </div>
         </nav>
@@ -98,6 +100,7 @@
                   <li><a href="services.html">Services</a></li>
                   <li><a href="media.html">Media</a></li>
                   <li><a href="contact.html">Contact Us</a></li>
+                  <li><a href="blog.html">Blog</a></li>
                 </ul>
               </div>
             </div>
