--- a/services.html
+++ b/services.html
@@ -11,6 +11,7 @@
     <meta name="HandheldFriendly" content="true"/>
     <link rel="stylesheet" href="assets/css/master.css"/>
     <link rel="stylesheet" href="assets/css/custom.css"/>
+    <link  href="https://unpkg.com/nanogallery2@2.3.0/dist/css/nanogallery2.min.css" rel="stylesheet" type="text/css">
 
     <link rel="icon" type="image/x-icon" href="favicon.ico"/><!--[if lt IE 9 ]>
     <script src="/assets/js/separate-js/html5shiv-3.7.2.min.js" type="text/javascript"></script><meta content="no" http-equiv="imagetoolbar">
@@ -37,6 +38,9 @@
       textarea:hover, input:hover {
         color: #fff;
       }
+      .nGY2GallerySub {
+        width: 100% !important;
+      }
 
       .form-control { color: white; }  /* WebKit, Blink, Edge */
       .form-control::-webkit-input-placeholder { color: white; /*border-bottom-color: red;*/ }  /* WebKit, Blink, Edge */
@@ -44,6 +48,22 @@
       .form-control::-moz-placeholder { color: white; /*border-bottom-color: red;*/ }  /* Mozilla Firefox 19+ */
       .form-control:-ms-input-placeholder { color: white; /*border-bottom-color: red;*/ }  /* Internet Explorer 10-11 */
       .form-control::-ms-input-placeholder { color: white; /*border-bottom-color: red;*/ }  /* Microsoft Edge */
+
+      .footer:before {
+        position: initial;
+        top: 0;
+        left: 0;
+        width: 0px;
+        height: 0px;
+        margin-left: 0px;
+        border-radius: 0%;
+        background-color: #000;
+      }
+
+      .section-form-contact_color_white {
+          /*padding: 94px 30px 30px 90px;*/
+        padding: 36px 48px 36px 48px;
+      }
     </style>
   </head>
   <body>
@@ -76,7 +96,6 @@
         <button type="button" class="fullmenu-close"><i class="fa fa-times"></i></button>
       </div>
 
-
       <header class="header header-boxed-width header-background-trans header-logo-black header-topbarbox-1-left header-topbarbox-2-right header-navibox-1-left header-navibox-2-right header-navibox-3-right header-navibox-4-right">
         <div class="container container-boxed-width">
           <nav id="nav" class="navbar">
@@ -107,7 +126,6 @@
           </nav>
         </div>
       </header>
-
 
       <div class="b-title-page area-bg area-bg_dark parallax">
         <div class="area-bg__inner">
@@ -257,11 +275,13 @@
         </div>
       </section>
 -->
-      <div class="block-table block-table-md">
-        <div class="block-table__cell col-md-6"><img src="assets/images/collage.png" alt="foto"></div>
+      <div class="block-table block-table-md" style="max-height: 646px;">
+        <div class="block-table__cell col-md-6">
+            <div id="nanogallery2"></div>
+        </div>
         <div class="block-table__cell col-md-6">
           <section style="background-color: rgb(31, 31, 31);" data-stellar-background-ratio="0.4" class="section-form-contact section-form-contact_color_white section-texture bg-primary stellar">
-            <div class="ui-decor-1"><img src="assets/media/general/ui-decor-1_wh.png" alt="decor"></div>
+            <div class="ui-decor-1" style="text-align: center;"><img src="assets/media/general/ui-decor-1_wh.png" alt="decor"></div>
             <h2 class="ui-title-block"><span></span> Contact Form</h2>
             <div class="ui-subtitle-block">Send us a message for your personalized event service.</div>
             <div id="success"></div>
@@ -366,35 +386,46 @@
       </footer>
     </div>
     
-    
     <script src="assets/libs/jquery-1.12.4.min.js"></script>
-    <script src="assets/libs/jquery-migrate-1.2.1.js"></script>
-    <!-- Bootstrap-->
     <script src="assets/libs/bootstrap/bootstrap.min.js"></script>
-    <!-- User customization-->
     <script src="assets/js/custom.js"></script>
-    <!---->
-    <!-- Slider 1-->
-    <!-- Slider 2-->
-    <script src="assets/plugins/bxslider/vendor/jquery.easing.1.3.js"></script>
-    <script src="assets/plugins/bxslider/vendor/jquery.fitvids.js"></script>
-    <script src="assets/plugins/bxslider/jquery.bxslider.min.js"></script>
-    <!-- Pop-up window-->
-    <script src="assets/plugins/magnific-popup/jquery.magnific-popup.min.js"></script>
-    <!-- Headers scripts-->
     <script src="assets/plugins/headers/slidebar.js"></script>
     <script src="assets/plugins/headers/header.js"></script>
-    <!-- Parallax-->
     <script src="assets/plugins/stellar/jquery.stellar.min.js"></script>
-    <!-- Filter and sorting images-->
-    <script src="assets/plugins/isotope/isotope.pkgd.min.js"></script>
-    <script src="assets/plugins/isotope/imagesLoaded.js"></script>
-    <!-- Progress numbers-->
-    <script src="assets/plugins/rendro-easy-pie-chart/jquery.easypiechart.min.js"></script>
-    <script src="assets/plugins/rendro-easy-pie-chart/waypoints.min.js"></script>
-    <!-- Animations-->
-    <script src="assets/plugins/scrollreveal/scrollreveal.min.js"></script>
-    <!-- Main slider-->
-    <script src="assets/plugins/slider-pro/jquery.sliderPro.min.js"></script>
+
+    <script  type="text/javascript" src="https://unpkg.com/nanogallery2@2.3.0/dist/jquery.nanogallery2.min.js"></script>
+    <script>
+      jQuery(document).ready(function () {
+
+        jQuery("#nanogallery2").nanogallery2( {
+          thumbnailHeight:  224,
+          thumbnailWidth:   224,
+          galleryTheme: 'light',
+          colorScheme: 'light',
+          thumbnailGutterWidth: 0,
+          thumbnailGutterHeight: 0,
+          thumbnailBorderHorizontal: 0,
+          thumbnailBorderVertical:   0,
+          itemsBaseURL:     "https://aaademosu.github.io/assets/images/gallery/",
+          galleryMosaic: [
+             { "w": 2, "h": 2, "c": 1, "r": 1 },
+             { "w": 1, "h": 1, "c": 3, "r": 1 },
+             { "w": 1, "h": 1, "c": 3, "r": 2 },
+             { "w": 1, "h": 1, "c": 1, "r": 3 },
+             { "w": 1, "h": 1, "c": 1, "r": 4 },
+             { "w": 2, "h": 2, "c": 2, "r": 3 },
+           ],
+          items: [
+              { src: '6e4d2f64-3900-4d94-b043-a2cbe8e4b947.JPG', srct: '6e4d2f64-3900-4d94-b043-a2cbe8e4b947.JPG', title: '' },
+              { src: 'ad5e2b05-f9be-49ad-9e17-5f18688db58f.JPG', srct: 'ad5e2b05-f9be-49ad-9e17-5f18688db58f.JPG', title: '' },
+              { src: '47623a13-d7d1-4200-b857-39e2f4fad2d8.JPG', srct: '47623a13-d7d1-4200-b857-39e2f4fad2d8.JPG', title: '' },
+              { src: '8b575387-8e08-49f8-8884-2bb623f8b8c6.JPG', srct: '8b575387-8e08-49f8-8884-2bb623f8b8c6.JPG', title: '' },
+              { src: 'b3c0cd56-ae63-45bc-91e1-7c95ed147743.JPG', srct: 'b3c0cd56-ae63-45bc-91e1-7c95ed147743.JPG', title: '' },
+              { src: 'f5025db1-5477-402c-a5fe-e263a3562b74.JPG', srct: 'f5025db1-5477-402c-a5fe-e263a3562b74.JPG', title: '' },
+              // { src: '', srct: '', title: '' },
+            ]
+        });
+      });
+    </script>
   </body>
 </html>
