--- a/services.html
+++ b/services.html
@@ -149,7 +149,7 @@
             <div class="col-md-8 col-md-offset-2">
               <div class="ui-decor-1"><img src="assets/media/general/ui-decor-1.png" alt="decor" class="center-block"></div>
               <div class="text-center">
-                <h2 class="ui-title-block ui-title-block_weight_normal"><span class="text-primary"> Event Management</span> Specialists</h2>
+                <h2 class="ui-title-block ui-title-block_weight_normal"><span class="text-primary"> Event Management Specialists</span> </h2>
                 <div class="ui-subtitle-block">At Posh Royal Events & Style, we leave no stone unturned and with our plethora of services we are fully set to match your needs as demanded. We are expert creators, planners and stylists be it for big events, luxury weddings or corporate functions be rest assured that we are up to the task.</div>
               </div>
             </div>
