--- a/about.html
+++ b/about.html
@@ -17,6 +17,11 @@
     <script src="/assets/js/separate-js/html5shiv-3.7.2.min.js" type="text/javascript"></script><meta content="no" http-equiv="imagetoolbar">
     <![endif]-->
     <style type="text/css">
+      @media (min-width: 1366px) {
+        .footer__main .container {
+          width: 1280px;
+        }
+      }
       .section-type-2 {
         padding: 12px;
       }
@@ -66,7 +71,9 @@
     </style>
   </head>
   <body>
-
+    <div id="fb-root"></div>
+    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v3.2"></script>    
+    
     <div data-header="sticky" data-header-top="200" data-canvas="container" class="l-theme animated-css" id="about">
       <div data-off-canvas="mobile-slidebar left overlay">
         <ul class="nav navbar-nav">
@@ -153,7 +160,7 @@
             <div class="ui-subtitle-block"> We focus on providing bespoke events, leaving nothing to chance from start to finish. </div>
             <section class="b-advantages-2 b-advantages-2_mod-a"><i class="b-advantages-2__icon flaticon-people"></i>
               <div class="b-advantages-2__inner">
-                <h3 class="b-advantages-2__title ui-title-inner bg-primary_b">The Events Specialists</h3>
+                <h3 class="b-advantages-2__title ui-title-inner bg-primary_b">The Event Management Specialists</h3>
                 <div class="b-advantages-2__info">Nigerians are known for their love for beauty and grandeur and as such we’ve developed expertise in crafting luxury and grand occasions that is time efficient in a stress-free manner.</div>
               </div>
             </section>
@@ -220,10 +227,10 @@
                   <div class="b-team__category">MD / CEO</div>
                   <div class="b-team__description" style=" text-align: justify; padding-bottom: 12px;margin-bottom: 0;">Rosemary Udu is the Managing Director / CEO of Posh Royal Events & Style where she leads a team of champions who have an in-depth understanding of the Event Industry. Rosemary is passionate about people development, coaching and mentoring. She also particularly enjoys working with and supporting women.</div>
                   <ul class="social-net list-inline">
-                    <li class="social-net__item"><a href="twitter.com" class="social-net__link text-primary_h"><i class="icon fa fa-twitter"></i></a></li>
-                    <li class="social-net__item"><a href="facebook.com" class="social-net__link text-primary_h"><i class="icon fa fa-facebook"></i></a></li>
-                    <li class="social-net__item"><a href="plus.google.com" class="social-net__link text-primary_h"><i class="icon fa fa-google-plus"></i></a></li>
-                    <li class="social-net__item"><a href="instagram.com" class="social-net__link text-primary_h"><i class="icon fa fa-instagram"></i></a></li>
+                    <li class="social-net__item"><a href="//twitter.com" class="social-net__link text-primary_h"><i class="icon fa fa-twitter"></i></a></li>
+                    <li class="social-net__item"><a href="//facebook.com" class="social-net__link text-primary_h"><i class="icon fa fa-facebook"></i></a></li>
+                    <li class="social-net__item"><a href="//plus.google.com" class="social-net__link text-primary_h"><i class="icon fa fa-google-plus"></i></a></li>
+                    <li class="social-net__item"><a href="//instagram.com" class="social-net__link text-primary_h"><i class="icon fa fa-instagram"></i></a></li>
                   </ul>
                 </div>
               </section>
@@ -236,10 +243,10 @@
                   <div class="b-team__category"> Head of Operations </div>
                   <div class="b-team__description" style=" text-align: justify; padding-bottom: 12px;margin-bottom: 0;">A graduate of Computer Science from the prestigious Covenant University. An ex-banker with a sound background in Strategic Business Development, Marketing & Sales, Relationship Management and Operations Management spanning over a 10-year period. She is very passionate about delivering excellence and creating value. </div>
                   <ul class="social-net list-inline">
-                    <li class="social-net__item"><a href="twitter.com" class="social-net__link text-primary_h"><i class="icon fa fa-twitter"></i></a></li>
-                    <li class="social-net__item"><a href="facebook.com" class="social-net__link text-primary_h"><i class="icon fa fa-facebook"></i></a></li>
-                    <li class="social-net__item"><a href="plus.google.com" class="social-net__link text-primary_h"><i class="icon fa fa-google-plus"></i></a></li>
-                    <li class="social-net__item"><a href="instagram.com" class="social-net__link text-primary_h"><i class="icon fa fa-instagram"></i></a></li>
+                    <li class="social-net__item"><a href="//twitter.com" class="social-net__link text-primary_h"><i class="icon fa fa-twitter"></i></a></li>
+                    <li class="social-net__item"><a href="//facebook.com" class="social-net__link text-primary_h"><i class="icon fa fa-facebook"></i></a></li>
+                    <li class="social-net__item"><a href="//plus.google.com" class="social-net__link text-primary_h"><i class="icon fa fa-google-plus"></i></a></li>
+                    <li class="social-net__item"><a href="//instagram.com" class="social-net__link text-primary_h"><i class="icon fa fa-instagram"></i></a></li>
                   </ul>
                 </div>
               </section>
@@ -252,10 +259,10 @@
                   <div class="b-team__category">Head, Coordination</div>
                   <div class="b-team__description" style=" text-align: justify; padding-bottom: 12px;margin-bottom: 0;">Emmanuel Okoro is a highly confident and organized administrative professional with diverse range of administrative experiences in various industries. He is an invaluable member of our team and possesses the requisite knowledge and is fully aligned with the fact that the most successful event is the one that meets your goals and exceeds your expectations.</div>
                   <ul class="social-net list-inline">
-                    <li class="social-net__item"><a href="twitter.com" class="social-net__link text-primary_h"><i class="icon fa fa-twitter"></i></a></li>
-                    <li class="social-net__item"><a href="facebook.com" class="social-net__link text-primary_h"><i class="icon fa fa-facebook"></i></a></li>
-                    <li class="social-net__item"><a href="plus.google.com" class="social-net__link text-primary_h"><i class="icon fa fa-google-plus"></i></a></li>
-                    <li class="social-net__item"><a href="instagram.com" class="social-net__link text-primary_h"><i class="icon fa fa-instagram"></i></a></li>
+                    <li class="social-net__item"><a href="//twitter.com" class="social-net__link text-primary_h"><i class="icon fa fa-twitter"></i></a></li>
+                    <li class="social-net__item"><a href="//facebook.com" class="social-net__link text-primary_h"><i class="icon fa fa-facebook"></i></a></li>
+                    <li class="social-net__item"><a href="//plus.google.com" class="social-net__link text-primary_h"><i class="icon fa fa-google-plus"></i></a></li>
+                    <li class="social-net__item"><a href="//instagram.com" class="social-net__link text-primary_h"><i class="icon fa fa-instagram"></i></a></li>
                   </ul>
                 </div>
               </section>
@@ -292,13 +299,12 @@
         </div>
       </div>
 
-
       <footer class="footer">
         <div class="footer__main">
           <div class="container">
             <div class="row">
               <div class="col-xs-12">
-                <div class="text-center"><a href="index.html" class="footer__logo"><img style="max-height: 112px;" src="assets/images/logo-transparent.png" alt="Logo" class="img-responsive"/></a></div>
+                <div class="text-center"><a href="home.html" class="footer__logo"><img style="max-height: 112px;" src="assets/images/logo-transparent.png" alt="Logo" class="img-responsive"/></a></div>
               </div>
             </div>
             <div class="row">
@@ -320,7 +326,7 @@
               </div>
             </div>
             <div class="row">
-              <div class="col-md-4">
+              <div class="col-md-3">
                 <div class="footer-section">
                   <h3 class="footer-section__title ui-title-inner"> About Posh Royal</h3>
                   <div class="footer-section__subtitle">The Events Specialists!</div>
@@ -329,25 +335,32 @@
                   </div><a href="about.html" class="btn btn-default btn-xs"><i class="icon"></i> Read More</a>
                 </div>
               </div>
-              <div class="col-md-4">
+              <div class="col-md-3">
                 <section class="footer-section">
                   <h3 class="footer-section__title ui-title-inner"><i class="ui-decor-2 bg-primary"></i> Keep In Touch</h3>
-                  <div class="footer__contact"><i class="icon icon-map"></i> 5th Avenue, Q Close, House 8, Festac Town, Lagos</div>
+                  <div class="footer__contact"><i class="icon icon-map"></i> 5th Avenue, Q Close, House 8, Festac<br /> Town, Lagos</div>
                   <div class="footer__contact"><i class="icon icon-call-in"></i> +2348023630583, +2348081399834</div>
                   <div class="footer__contact"><i class="icon icon-envelope-open"></i> info@poshroyaleventsstyle.com</div>
                   <div class="footer__contact"><i class="icon icon-clock"></i> Mon - Sat 8.00 am - 6.00 pm</div>
                 </section>
               </div>
-              <div class="col-md-4">
+              <div class="col-md-6">
                 <section class="footer-section">
-                  <h3 class="footer-section__title ui-title-inner"><i class="ui-decor-2 bg-primary"></i> Quick Links</h3>
-                  <ul class="footer-list list list-mark-4 list-unstyled">
-                    <li class="footer-list__item"><a href="services.html" class="footer-list__link">Our Services</a></li>
-                    <li class="footer-list__item"><a href="team.html" class="footer-list__link">Our Team</a></li>
-                    <li class="footer-list__item"><a href="about.html" class="footer-list__link">About Us</a></li>
-                    <li class="footer-list__item"><a href="javascript:void(0)" class="footer-list__link">News Blog</a></li>
-                    <li class="footer-list__item"><a href="contact.html" class="footer-list__link">Get In Touch</a></li>
-                  </ul>
+                  <div class="row">
+                    <div class="col-md-6">
+                      <h3 style="margin-top: 0;" class="footer-section__title ui-title-inner"> Facebook </h3>
+                      <div class="fb-page" data-href="https://www.facebook.com/Posh-Royal-Events-Style-732258220494872/" data-tabs="timeline" data-height="313" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/Posh-Royal-Events-Style-732258220494872/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/Posh-Royal-Events-Style-732258220494872/">Posh Royal Events &amp; Style</a></blockquote></div>
+                    </div>
+                    <div class="col-md-6" style="padding: 0;">
+                      <h3 style="margin-top: 0;" class="footer-section__title ui-title-inner"> Instagram </h3>
+                      <div class="slider-pro" >
+                        <div class="sp-slides" id="instafeed">
+                        </div>
+                      </div>
+                      <h3 style="margin-top: 0;text-align: center;" class="footer-section__title ui-title-inner"> <a style="color: #fff;text-align: center;" href="//instagram.com/posh_royal_events_style">FOLLOW US</a> </h3>
+
+                    </div>
+                  </div>
                 </section>
               </div>
             </div>
@@ -359,11 +372,11 @@
               <div class="col-xs-12">
                 <div class="copyright pull-left">© <script type="text/javascript"> document.write( (new Date()).getFullYear() )</script> <strong> Posh Royal Events &amp; Style</strong> - The Events Specialists All Rights Reserved.<a href="javascript:void(0)" class="copyright__link"> Terms of Use</a><a href="javascript:void(0)" class="copyright__link">Privacy Policy</a></div>
                 <ul class="social-net list-inline pull-right">
-                  <li class="social-net__item"><a href="//youtube.com" class="social-net__link text-primary_h"><i class="icon fa fa-youtube"></i></a></li>
-                  <li class="social-net__item"><a href="//twitter.com" class="social-net__link text-primary_h"><i class="icon fa fa-twitter"></i></a></li>
-                  <li class="social-net__item"><a href="//facebook.com" class="social-net__link text-primary_h"><i class="icon fa fa-facebook"></i></a></li>
+                  <li class="social-net__item"><a href="//youtube.com/channel/UCkiRzppeTreqg-GAjN8lsuw" class="social-net__link text-primary_h"><i class="icon fa fa-youtube"></i></a></li>
+                  <li class="social-net__item"><a href="//twitter.com/PoshRoyalEvents" class="social-net__link text-primary_h"><i class="icon fa fa-twitter"></i></a></li>
+                  <li class="social-net__item"><a href="//facebook.com/Posh-Royal-Events-Style-732258220494872/" class="social-net__link text-primary_h"><i class="icon fa fa-facebook"></i></a></li>
                   <li class="social-net__item"><a href="//plus.google.com" class="social-net__link text-primary_h"><i class="icon fa fa-google-plus"></i></a></li>
-                  <li class="social-net__item"><a href="//instagram.com" class="social-net__link text-primary_h"><i class="icon fa fa-instagram"></i></a></li>
+                  <li class="social-net__item"><a href="//instagram.com/posh_royal_events_style" class="social-net__link text-primary_h"><i class="icon fa fa-instagram"></i></a></li>
                 </ul>
               </div>
             </div>
@@ -381,47 +394,48 @@
     <script src="assets/plugins/headers/header.js"></script>
     <script src="assets/plugins/stellar/jquery.stellar.min.js"></script>
     <script src="assets/js/custom.js"></script>
+    <script src="assets/js/instafeed.min.js"></script>
 
     <script  type="text/javascript" src="https://unpkg.com/nanogallery2@2.3.0/dist/jquery.nanogallery2.min.js"></script>
     <script>
-function isElementVisible(el) {
-  var rect     = el.getBoundingClientRect(),
-    vWidth   = window.innerWidth || doc.documentElement.clientWidth,
-    vHeight  = window.innerHeight || doc.documentElement.clientHeight,
-    efp      = function (x, y) { return document.elementFromPoint(x, y) };     
+      function isElementVisible(el) {
+        var rect     = el.getBoundingClientRect(),
+          vWidth   = window.innerWidth || doc.documentElement.clientWidth,
+          vHeight  = window.innerHeight || doc.documentElement.clientHeight,
+          efp      = function (x, y) { return document.elementFromPoint(x, y) };     
 
-  // Return false if it's not in the viewport
-  if (rect.right < 0 || rect.bottom < 0  || rect.left > vWidth || rect.top > vHeight ) {
-    return false;
-  }
+        // Return false if it's not in the viewport
+        if (rect.right < 0 || rect.bottom < 0  || rect.left > vWidth || rect.top > vHeight ) {
+          return false;
+        }
 
-  return ( el.contains( efp( rect.left,  rect.top ) ) );
-  // Return true if any of its four corners are visible
-  //return ( el.contains(efp(rect.left,  rect.top)) ||  el.contains(efp(rect.right, rect.top)) ||  el.contains(efp(rect.right, rect.bottom)) ||  el.contains(efp(rect.left,  rect.bottom)) );
-}
-
-window.addEventListener('load', function() {
-  var vendor = document.getElementById('whyposhGallery');
-  var observer = new IntersectionObserver((entries, observer) => {
-    entries.forEach(entry => {
-      if (entry.intersectionRatio > 0) {
-        console.log('in the view');
-        setTimeout(function() {
-          var gHeight = $('#whyposhGallery').height();
-          $('#whyposh').css( { 'min-height': gHeight, 'max-height': gHeight } );
-          observer.disconnect();
-        }, 1000);
-      } else {
-        console.log('out of view');
+        return ( el.contains( efp( rect.left,  rect.top ) ) );
+        // Return true if any of its four corners are visible
+        //return ( el.contains(efp(rect.left,  rect.top)) ||  el.contains(efp(rect.right, rect.top)) ||  el.contains(efp(rect.right, rect.bottom)) ||  el.contains(efp(rect.left,  rect.bottom)) );
       }
-    });
-  }, {
-    root: document.querySelector('#about'),
-    rootMargin: '0px',
-    threshold: [0, 0.25, 0.75, 1]
-  });
-  observer.observe(vendor);
-});
+
+      window.addEventListener('load', function() {
+        var vendor = document.getElementById('whyposhGallery');
+        var observer = new IntersectionObserver((entries, observer) => {
+          entries.forEach(entry => {
+            if (entry.intersectionRatio > 0) {
+              console.log('in the view');
+              setTimeout(function() {
+                var gHeight = $('#whyposhGallery').height();
+                $('#whyposh').css( { 'min-height': gHeight, 'max-height': gHeight } );
+                observer.disconnect();
+              }, 1000);
+            } else {
+              console.log('out of view');
+            }
+          });
+        }, {
+          root: document.querySelector('#about'),
+          rootMargin: '0px',
+          threshold: [0, 0.25, 0.75, 1]
+        });
+        observer.observe(vendor);
+      });
 
       jQuery(document).ready(function () {
         var gWidth = $('#whyposhGallery').width();
@@ -456,6 +470,20 @@ window.addEventListener('load', function() {
           ]
         });
       });
+    </script>
+    <script type="text/javascript">
+      var feed = new Instafeed({
+        get: 'user',
+        userId: '9668316242',
+        clientId: '47778d869f554d29956ddebd94a41bd6',
+        accessToken: '9668316242.47778d8.dcb49be5d3cc48dca9884346f78f3f35',
+        sortBy: 'most-recent',
+        limit: 4,
+        template: '<div class="col-md-6" style="padding-left: 0;margin-bottom:12px;"> <a class="animation" href="{{link}}"> <img class=" instagram-image" src="{{image}}"/> </a> </div>',
+        after: function() {
+        }
+      });
+      feed.run();
     </script>
   </body>
 </html>
