--- a/services.html
+++ b/services.html
@@ -17,6 +17,11 @@
     <script src="/assets/js/separate-js/html5shiv-3.7.2.min.js" type="text/javascript"></script><meta content="no" http-equiv="imagetoolbar">
     <![endif]-->
     <style type="text/css">
+      @media (min-width: 1366px) {
+        .footer__main .container {
+          width: 1280px;
+        }
+      }
       form, input, select, textarea{
         color: #fff;
       }
@@ -67,6 +72,8 @@
     </style>
   </head>
   <body>
+    <div id="fb-root"></div>
+    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v3.2"></script>    
 
     <div data-header="sticky" data-header-top="200" data-canvas="container" class="l-theme animated-css">
       <div data-off-canvas="mobile-slidebar left overlay">
@@ -312,7 +319,7 @@
           <div class="container">
             <div class="row">
               <div class="col-xs-12">
-                <div class="text-center"><a href="index.html" class="footer__logo"><img style="max-height: 112px;" src="assets/images/logo-transparent.png" alt="Logo" class="img-responsive"/></a></div>
+                <div class="text-center"><a href="home.html" class="footer__logo"><img style="max-height: 112px;" src="assets/images/logo-transparent.png" alt="Logo" class="img-responsive"/></a></div>
               </div>
             </div>
             <div class="row">
@@ -334,7 +341,7 @@
               </div>
             </div>
             <div class="row">
-              <div class="col-md-4">
+              <div class="col-md-3">
                 <div class="footer-section">
                   <h3 class="footer-section__title ui-title-inner"> About Posh Royal</h3>
                   <div class="footer-section__subtitle">The Events Specialists!</div>
@@ -343,25 +350,28 @@
                   </div><a href="about.html" class="btn btn-default btn-xs"><i class="icon"></i> Read More</a>
                 </div>
               </div>
-              <div class="col-md-4">
+              <div class="col-md-3">
                 <section class="footer-section">
                   <h3 class="footer-section__title ui-title-inner"><i class="ui-decor-2 bg-primary"></i> Keep In Touch</h3>
-                  <div class="footer__contact"><i class="icon icon-map"></i> 5th Avenue, Q Close, House 8, Festac Town, Lagos</div>
+                  <div class="footer__contact"><i class="icon icon-map"></i> 5th Avenue, Q Close, House 8, Festac<br /> Town, Lagos</div>
                   <div class="footer__contact"><i class="icon icon-call-in"></i> +2348023630583, +2348081399834</div>
                   <div class="footer__contact"><i class="icon icon-envelope-open"></i> info@poshroyaleventsstyle.com</div>
                   <div class="footer__contact"><i class="icon icon-clock"></i> Mon - Sat 8.00 am - 6.00 pm</div>
                 </section>
               </div>
-              <div class="col-md-4">
+              <div class="col-md-6">
                 <section class="footer-section">
-                  <h3 class="footer-section__title ui-title-inner"><i class="ui-decor-2 bg-primary"></i> Quick Links</h3>
-                  <ul class="footer-list list list-mark-4 list-unstyled">
-                    <li class="footer-list__item"><a href="services.html" class="footer-list__link">Our Services</a></li>
-                    <li class="footer-list__item"><a href="team.html" class="footer-list__link">Our Team</a></li>
-                    <li class="footer-list__item"><a href="about.html" class="footer-list__link">About Us</a></li>
-                    <li class="footer-list__item"><a href="javascript:void(0)" class="footer-list__link">News Blog</a></li>
-                    <li class="footer-list__item"><a href="contact.html" class="footer-list__link">Get In Touch</a></li>
-                  </ul>
+                  <div class="row">
+                    <div class="col-md-6">
+                      <h3 style="margin-top: 0;" class="footer-section__title ui-title-inner"> Facebook </h3>
+                      <div class="fb-page" data-href="https://www.facebook.com/Posh-Royal-Events-Style-732258220494872/" data-tabs="timeline" data-height="313" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/Posh-Royal-Events-Style-732258220494872/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/Posh-Royal-Events-Style-732258220494872/">Posh Royal Events &amp; Style</a></blockquote></div>
+                    </div>
+                    <div class="col-md-6" style="padding: 0;">
+                      <h3 style="margin-top: 0;" class="footer-section__title ui-title-inner"> Instagram </h3>
+                      <div class="sp-slides" id="instafeed"></div>
+                      <h3 style="margin-top: 0;text-align: center;" class="footer-section__title ui-title-inner"> <a style="color: #fff;text-align: center;" href="//instagram.com/posh_royal_events_style">FOLLOW US</a> </h3>
+                    </div>
+                  </div>
                 </section>
               </div>
             </div>
@@ -373,11 +383,11 @@
               <div class="col-xs-12">
                 <div class="copyright pull-left">© <script type="text/javascript"> document.write( (new Date()).getFullYear() )</script> <strong> Posh Royal Events &amp; Style</strong> - The Events Specialists All Rights Reserved.<a href="javascript:void(0)" class="copyright__link"> Terms of Use</a><a href="javascript:void(0)" class="copyright__link">Privacy Policy</a></div>
                 <ul class="social-net list-inline pull-right">
-                  <li class="social-net__item"><a href="//youtube.com" class="social-net__link text-primary_h"><i class="icon fa fa-youtube"></i></a></li>
-                  <li class="social-net__item"><a href="//twitter.com" class="social-net__link text-primary_h"><i class="icon fa fa-twitter"></i></a></li>
-                  <li class="social-net__item"><a href="//facebook.com" class="social-net__link text-primary_h"><i class="icon fa fa-facebook"></i></a></li>
+                  <li class="social-net__item"><a href="//youtube.com/channel/UCkiRzppeTreqg-GAjN8lsuw" class="social-net__link text-primary_h"><i class="icon fa fa-youtube"></i></a></li>
+                  <li class="social-net__item"><a href="//twitter.com/PoshRoyalEvents" class="social-net__link text-primary_h"><i class="icon fa fa-twitter"></i></a></li>
+                  <li class="social-net__item"><a href="//facebook.com/Posh-Royal-Events-Style-732258220494872/" class="social-net__link text-primary_h"><i class="icon fa fa-facebook"></i></a></li>
                   <li class="social-net__item"><a href="//plus.google.com" class="social-net__link text-primary_h"><i class="icon fa fa-google-plus"></i></a></li>
-                  <li class="social-net__item"><a href="//instagram.com" class="social-net__link text-primary_h"><i class="icon fa fa-instagram"></i></a></li>
+                  <li class="social-net__item"><a href="//instagram.com/posh_royal_events_style" class="social-net__link text-primary_h"><i class="icon fa fa-instagram"></i></a></li>
                 </ul>
               </div>
             </div>
@@ -389,6 +399,7 @@
     <script src="assets/libs/jquery-1.12.4.min.js"></script>
     <script src="assets/libs/bootstrap/bootstrap.min.js"></script>
     <script src="assets/js/custom.js"></script>
+    <script src="assets/js/instafeed.min.js"></script>
     <script src="assets/plugins/headers/slidebar.js"></script>
     <script src="assets/plugins/headers/header.js"></script>
     <script src="assets/plugins/stellar/jquery.stellar.min.js"></script>
@@ -409,24 +420,38 @@
           thumbnailBorderVertical:   0,
           itemsBaseURL:     "https://aaademosu.github.io/assets/images/gallery/",
           galleryMosaic: [
-             { "w": 2, "h": 2, "c": 1, "r": 1 },
-             { "w": 1, "h": 1, "c": 3, "r": 1 },
-             { "w": 1, "h": 1, "c": 3, "r": 2 },
-             { "w": 1, "h": 1, "c": 1, "r": 3 },
-             { "w": 1, "h": 1, "c": 1, "r": 4 },
-             { "w": 2, "h": 2, "c": 2, "r": 3 },
-           ],
+            { "w": 2, "h": 2, "c": 1, "r": 1 },
+            { "w": 1, "h": 1, "c": 3, "r": 1 },
+            { "w": 1, "h": 1, "c": 3, "r": 2 },
+            { "w": 1, "h": 1, "c": 1, "r": 3 },
+            { "w": 1, "h": 1, "c": 1, "r": 4 },
+            { "w": 2, "h": 2, "c": 2, "r": 3 },
+          ],
           items: [
-              { src: '6e4d2f64-3900-4d94-b043-a2cbe8e4b947.JPG', srct: '6e4d2f64-3900-4d94-b043-a2cbe8e4b947.JPG', title: '' },
-              { src: 'ad5e2b05-f9be-49ad-9e17-5f18688db58f.JPG', srct: 'ad5e2b05-f9be-49ad-9e17-5f18688db58f.JPG', title: '' },
-              { src: '47623a13-d7d1-4200-b857-39e2f4fad2d8.JPG', srct: '47623a13-d7d1-4200-b857-39e2f4fad2d8.JPG', title: '' },
-              { src: '8b575387-8e08-49f8-8884-2bb623f8b8c6.JPG', srct: '8b575387-8e08-49f8-8884-2bb623f8b8c6.JPG', title: '' },
-              { src: 'b3c0cd56-ae63-45bc-91e1-7c95ed147743.JPG', srct: 'b3c0cd56-ae63-45bc-91e1-7c95ed147743.JPG', title: '' },
-              { src: 'f5025db1-5477-402c-a5fe-e263a3562b74.JPG', srct: 'f5025db1-5477-402c-a5fe-e263a3562b74.JPG', title: '' },
-              // { src: '', srct: '', title: '' },
-            ]
+            { src: '6e4d2f64-3900-4d94-b043-a2cbe8e4b947.JPG', srct: '6e4d2f64-3900-4d94-b043-a2cbe8e4b947.JPG', title: '' },
+            { src: 'ad5e2b05-f9be-49ad-9e17-5f18688db58f.JPG', srct: 'ad5e2b05-f9be-49ad-9e17-5f18688db58f.JPG', title: '' },
+            { src: '47623a13-d7d1-4200-b857-39e2f4fad2d8.JPG', srct: '47623a13-d7d1-4200-b857-39e2f4fad2d8.JPG', title: '' },
+            { src: '8b575387-8e08-49f8-8884-2bb623f8b8c6.JPG', srct: '8b575387-8e08-49f8-8884-2bb623f8b8c6.JPG', title: '' },
+            { src: 'b3c0cd56-ae63-45bc-91e1-7c95ed147743.JPG', srct: 'b3c0cd56-ae63-45bc-91e1-7c95ed147743.JPG', title: '' },
+            { src: 'f5025db1-5477-402c-a5fe-e263a3562b74.JPG', srct: 'f5025db1-5477-402c-a5fe-e263a3562b74.JPG', title: '' },
+            // { src: '', srct: '', title: '' },
+          ]
         });
       });
+    </script>
+    <script type="text/javascript">
+      var feed = new Instafeed({
+        get: 'user',
+        userId: '9668316242',
+        clientId: '47778d869f554d29956ddebd94a41bd6',
+        accessToken: '9668316242.47778d8.dcb49be5d3cc48dca9884346f78f3f35',
+        sortBy: 'most-recent',
+        limit: 4,
+        template: '<div class="col-md-6" style="padding-left: 0;margin-bottom:12px;"> <a class="animation" href="{{link}}"> <img class=" instagram-image" src="{{image}}"/> </a> </div>',
+        after: function() {
+        }
+      });
+      feed.run();
     </script>
   </body>
 </html>
