google analytics updates

--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-138159351-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-138159351-1');
+    </script>
     <meta charset="utf-8"/>
     <meta http-equiv="x-ua-compatible" content="ie=edge"/>
     <title> Posh Royal Events &amp; Style </title>
@@ -363,7 +371,7 @@
                         <div class="sp-slides" id="instafeed">
                         </div>
                       </div>
-                      <h3 style="margin-top: 0;text-align: center;" class="footer-section__title ui-title-inner"> <a style="color: #fff;text-align: center;" href="//instagram.com/posh_royal_events_style">FOLLOW US</a> </h3>
+                      <h3 style="margin-top: 0;text-align: center;" class="footer-section__title ui-title-inner"> <a style="color: #fff;text-align: center;" href="//instagram.com/posh_royal_events__style">FOLLOW US</a> </h3>
 
                     </div>
                   </div>
@@ -382,7 +390,7 @@
                   <li class="social-net__item"><a href="//twitter.com/PoshRoyalEvents" class="social-net__link text-primary_h"><i class="icon fa fa-twitter"></i></a></li>
                   <li class="social-net__item"><a href="//facebook.com/Posh-Royal-Events-Style-732258220494872/" class="social-net__link text-primary_h"><i class="icon fa fa-facebook"></i></a></li>
                   <li class="social-net__item"><a href="//plus.google.com" class="social-net__link text-primary_h"><i class="icon fa fa-google-plus"></i></a></li>
-                  <li class="social-net__item"><a href="//instagram.com/posh_royal_events_style" class="social-net__link text-primary_h"><i class="icon fa fa-instagram"></i></a></li>
+                  <li class="social-net__item"><a href="//instagram.com/posh_royal_events__style" class="social-net__link text-primary_h"><i class="icon fa fa-instagram"></i></a></li>
                 </ul>
               </div>
             </div>
