--- a/blog.html
+++ b/blog.html
@@ -3,6 +3,14 @@
 <html lang="en">
 
 <head itemscope itemtype="http://schema.org/WebSite">
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-138159351-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-138159351-1');
+    </script>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
